@@ -163,10 +163,10 @@ GMT.offset.from.tz <- function(tz)
     if (tz == "Z"  )	return(  0  ) # Zulu Time Zone	Military	UTC
 }
 
-gravity <- function(lat, degrees=TRUE)
+gravity <- function(latitude=45, degrees=TRUE)
 {
-    if (degrees) lat <- lat * 0.0174532925199433
-    9.780318*(1.0+5.3024e-3*sin(lat)^2-5.9e-6*sin(2*lat)^2)
+    if (degrees) latitude <- latitude * 0.0174532925199433
+    9.780318*(1.0+5.3024e-3*sin(latitude)^2-5.9e-6*sin(2*latitude)^2)
 }
 
 make.filter <- function(type=c("blackman-harris"), m)
