@@ -1,4 +1,5 @@
 0.1-77
+- give default for latitude argument to gravity()
 - plot.sealevel(): remove argument focus.time and add argument which.
 - rename tdr functions as pt, to reflect oral convention
 - add geod.xy()
